--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/tempColorB"
-    tools:context=".BlankFragment">
+    tools:context=".BaseFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <Spinner
