--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -32,6 +32,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dropdown_spinner"
-        tools:listitem="@layout/news_item_v2" />
+        tools:listitem="@layout/news_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
